modified:   posts/2025-08-14/index.qmd

--- a/posts/2025-08-14/index.qmd
+++ b/posts/2025-08-14/index.qmd
@@ -210,7 +210,7 @@ Practice with discipline, but without friction, maintaining a calm and steady ap
 
 ## Simulated Performance
 
-{{< video https://youtu.be/Nh1_o1FY2k4?si=ZCfs5DqrqGXKikPO >}}
+{{< video https://youtu.be/U6nilIZM2jw >}}
 
 ## Fender Les Paul
 
