modified:   posts/2025-08-14/index.qmd
	modified:   posts/2025-08-14/index.qmd
	modified:   posts/2025-08-27/index.qmd

--- a/posts/2025-08-14/index.qmd
+++ b/posts/2025-08-14/index.qmd
@@ -208,9 +208,9 @@ Practice with discipline, but without friction, maintaining a calm and steady ap
 -   Record the full set straight through.\
 -   Treat it like a real performance: start with breath, finish with a small bow or smile.
 
-## Simulated Performance
+## Recorded Performance
 
-{{< video https://youtu.be/Nh1_o1FY2k4?si=ZCfs5DqrqGXKikPO >}}
+{{< video https://youtu.be/U6nilIZM2jw >}}
 
 ## Fender Les Paul
 
